--- a/src/main/resources/templates/exposants.html
+++ b/src/main/resources/templates/exposants.html
@@ -81,17 +81,20 @@
                         </td>
 
                         <td style="text-align: center;">
-                            <a th:href="@{/exposantdetails(id=${exposant.exposantId})}" class="btn btn-outline-warning">
+                            <a th:href="@{/exposantdetails/{id}(id=${user.exposant.exposantId})}" class="btn btn-outline-warning">
                                 <i class="fa fa-bars"></i>
                             </a>
-                            <a th:href="@{/editExposant(id=${exposant.exposantId}, keyword=${keyword}, page=${currentPage})}" class="btn btn-outline-secondary">
+                            <a th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
+                            <a th:href="@{/editExposant(id=${user.exposant.exposantId}, keyword=${keyword}, page=${currentPage})}" class="btn btn-outline-secondary">
                                 <i class="fa fa-pencil"></i>
                             </a>
+                            </a>
+                            <a th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
                             <a onclick="return confirm('Etes vous sûre?')" class="btn btn-outline-danger"
                                th:href="@{deleteExposant(id=${exposant.exposantId}, keyword=${keyword}, page=${currentPage})}">
                                 <i class="fa fa-trash"></i>
                             </a>
-
+                            </a>
                         </td>
                     </tr>
                     </tbody>
